<resources>
    <string name="app_name">wagba</string>
    <string name="welcome_to">Welcome to,</string>
    <string name="wagba">Wagba</string>
    <string name="dot">.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Sign in</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="hi_mostafa">Hi Mostafa!</string>
    <string name="hungry_in_asu">Hungry in ASU?</string>
    <string name="w">W</string>
    <string name="search">Search...</string>
    <string name="mcdonald_s">McDonald\'s</string>
    <string name="_4_5_19">4.5 (19)</string>
    <string name="_45min">45min</string>
    <string name="share_box">Share Box</string>
    <string name="desc">Pick 2 sandwiches from Bug Mac (beef/chicken) and McChicken + 2 sandwiches from Beefburger.</string>
    <string name="egp">EGP</string>
    <string name="_165_0">165.0</string>
    <string name="cart">Cart</string>
    <string name="_2">2</string>
    <string name="price">Price</string>
    <string name="delivery">Delivery</string>
    <string name="_25_0">25.0</string>
    <string name="total">Total</string>
    <string name="_190_0">190.0</string>
    <string name="checkout">Checkout</string>
    <string name="delivery_details">Delivery Details</string>
    <string name="which_gate">Which Gate?</string>
    <string name="gate_3">Gate 3</string>
    <string name="gate_4">Gate 4</string>
    <string name="delivery_times">Delivery Times</string>
    <string name="_12_00_pm">12:00 PM</string>
    <string name="_3_00_pm">3:00 PM</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="title_activity_ordered_successfully">OrderedSuccessfully</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="back_to_homepage">Back to Homepage</string>
    <string name="orders">Orders</string>
    <string name="_9_12_2022">9/12/2022</string>
    <string name="_2_30_pm">2:30 PM</string>
    <string name="order_status">Order Status</string>
    <string name="restaurant">Restaurant</string>
    <string name="status">Status</string>
    <string name="delivered">Delivered</string>
    <string name="order_items">Order Items</string>
    <string name="name">Name</string>
    <string name="_2_items">2 items</string>
    <string name="_0_items">0 items</string>
    <string name="profile">Profile</string>
    <string name="address">Address</string>
    <string name="fifth_settlement_cairo_egypt">Fifth Settlement, Cairo, Egypt</string>
    <string name="university_year">University Year</string>
    <string name="date">Date</string>
</resources>