<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="90dp"
    android:gravity="center_vertical"
    android:layout_marginBottom="20dp"
    android:id="@+id/item_frame"
    android:orientation="horizontal">
    
    <ImageView
        android:layout_width="110dp"
        android:layout_height="90dp"
        android:src="@drawable/meal"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/order_res_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mcdonald_s"
            android:textColor="@color/black"
            android:fontFamily="@font/montserratsemibold"
            android:textSize="16sp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/order_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserratsemibold"
                android:text="@string/_165_0"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:fontFamily="@font/montserratregular"
                android:text="@string/egp"
                android:textColor="#414141"
                android:textSize="9sp" />

        </LinearLayout>

    </LinearLayout>

    <Space
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/order_date"
            android:layout_marginBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#3C3C3C"
            android:text="@string/_9_12_2022"
            android:fontFamily="@font/montserratregular"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/order_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#898989"
            android:text="@string/_2_30_pm"
            android:fontFamily="@font/montserratregular"
            android:textSize="12sp"/>

    </LinearLayout>
    
    

</LinearLayout>