<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.OrderStatus">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/arrow_left" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserratsemibold"
            android:text="@string/order_status"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Space
            android:layout_width="24dp"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restaurant"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:fontFamily="@font/montserratsemibold"/>

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mcdonald_s"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:fontFamily="@font/montserratregular"/>

    </LinearLayout>

    <ImageView
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/line" />

    <LinearLayout
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:fontFamily="@font/montserratsemibold"/>

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_165_0"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:fontFamily="@font/montserratregular"/>

    </LinearLayout>

    <ImageView
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/line" />

    <LinearLayout
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:fontFamily="@font/montserratsemibold"/>

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delivered"
            android:textSize="16sp"
            android:textColor="#669C84"
            android:fontFamily="@font/montserratregular"/>

    </LinearLayout>

    <ImageView
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/line" />

    <TextView
        android:layout_marginStart="30dp"
        android:layout_marginBottom="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_items"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:fontFamily="@font/montserratsemibold"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/order_details_recycler_view"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        tools:itemCount="3"
        android:layout_width="match_parent"
        tools:listitem="@layout/order_details_item"
        android:layout_height="wrap_content"/>

    <ImageView
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/line" />

</LinearLayout>