<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="65dp"
    android:id="@+id/meal_item"
    android:layout_marginBottom="15dp"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/menu_item_image"
        android:layout_width="80dp"
        android:layout_height="65dp"
        android:src="@drawable/meal" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/menu_item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserratsemibold"
            android:text="@string/share_box"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/menu_item_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserratregular"
            android:lines="3"
            android:text="@string/desc"
            android:textColor="#969696"
            android:textSize="10sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/menu_item_add_btn"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/add_square" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/menu_item_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserratsemibold"
                android:text="@string/_165_0"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserratregular"
                android:lines="3"
                android:text="@string/egp"
                android:textColor="#969696"
                android:textSize="9sp" />

        </LinearLayout>


    </LinearLayout>


</LinearLayout>