<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.DeliveryDetails">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="40dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/back_button"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/arrow_left" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserratsemibold"
                    android:text="@string/delivery_details"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <Space
                    android:layout_width="24dp"
                    android:layout_height="match_parent" />
            </LinearLayout>

            <TextView
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/which_gate"
                android:fontFamily="@font/montserratregular"
                android:textColor="@color/black"
                android:textSize="16sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/gate_3_item"
                    android:layout_marginStart="30dp"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/unselected_item_bg"
                    android:layout_width="0dp"
                    android:layout_weight="5"
                    android:gravity="center"
                    android:layout_height="77dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gate_3"
                        android:fontFamily="@font/montserratsemibold"
                        android:textColor="@color/black"
                        android:textSize="16sp"/>

                </LinearLayout>

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>

                <LinearLayout
                    android:id="@+id/gate_4_item"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/selected_item_bg"
                    android:layout_width="0dp"
                    android:layout_weight="5"
                    android:gravity="center"
                    android:layout_height="77dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gate_4"
                        android:fontFamily="@font/montserratsemibold"
                        android:textColor="@color/black"
                        android:textSize="16sp"/>

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delivery_times"
                android:fontFamily="@font/montserratregular"
                android:textColor="@color/black"
                android:textSize="16sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/item_12_00"
                    android:layout_marginStart="30dp"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/selected_item_bg"
                    android:layout_width="0dp"
                    android:layout_weight="5"
                    android:gravity="center"
                    android:layout_height="77dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_12_00_pm"
                        android:fontFamily="@font/montserratsemibold"
                        android:textColor="@color/black"
                        android:textSize="16sp"/>

                </LinearLayout>

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>

                <LinearLayout
                    android:id="@+id/item_3_00"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/unselected_item_bg"
                    android:layout_width="0dp"
                    android:layout_weight="5"
                    android:gravity="center"
                    android:layout_height="77dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_3_00_pm"
                        android:fontFamily="@font/montserratsemibold"
                        android:textColor="@color/black"
                        android:textSize="16sp"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserratregular"
                        android:text="@string/price"
                        android:textColor="#7C7C7C"
                        android:textSize="12sp" />

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/total_price"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserratsemibold"
                            android:text="@string/_165_0"
                            android:textColor="@color/black"
                            android:textSize="14sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="3dp"
                            android:fontFamily="@font/montserratregular"
                            android:text="@string/egp"
                            android:textColor="#414141"
                            android:textSize="9sp" />

                    </LinearLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"

                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserratregular"
                        android:text="@string/delivery"
                        android:textColor="#7C7C7C"
                        android:textSize="12sp" />

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserratsemibold"
                            android:text="@string/_25_0"
                            android:textColor="@color/black"
                            android:textSize="14sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="3dp"
                            android:fontFamily="@font/montserratregular"
                            android:text="@string/egp"
                            android:textColor="#414141"
                            android:textSize="9sp" />

                    </LinearLayout>

                </LinearLayout>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:src="@drawable/dashed_line" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/montserratregular"
                        android:text="@string/total"
                        android:textColor="#7C7C7C"
                        android:textSize="12sp" />

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/total_final_price"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserratsemibold"
                            android:text="@string/_190_0"
                            android:textColor="@color/black"
                            android:textSize="14sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="3dp"
                            android:fontFamily="@font/montserratregular"
                            android:text="@string/egp"
                            android:textColor="#414141"
                            android:textSize="9sp" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/confirm_order_button"
                android:layout_marginBottom="20dp"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/custom_main_button"
                android:fontFamily="@font/montserratbold"
                android:text="@string/confirm_order"
                android:textAllCaps="false"
                android:textSize="16sp" />

        </LinearLayout>

    </RelativeLayout>

</androidx.appcompat.widget.LinearLayoutCompat>